--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^6.0.1",
     "postcss": "^8.3.9",
     "postcss-loader": "^6.2.0",
+    "prettier": "2.5.1",
     "sass-lint": "^1.13.1",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
