update on alert, badge and btn components

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "build": "webpack --config webpack/webpack.build.js --progress",
-    "prettier:fix": "npx run prettier --write ."
+    "prettier:fix": "npx prettier --write ."
   },
   "repository": {
     "type": "git",
