--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "",
   "scripts": {
-    "build": "webpack --config webpack/webpack.build.js --progress",
-    "prettier:fix": "npx prettier --write ."
+    "build": "webpack --config webpack/webpack.build.js --progress"
   },
   "repository": {
     "type": "git",
@@ -22,10 +21,11 @@
     "node-sass": "^6.0.1",
     "postcss": "^8.3.9",
     "postcss-loader": "^6.2.0",
-    "prettier": "2.5.1",
-    "sass-lint": "^1.13.1",
+    "postcss-scss": "^4.0.3",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
+    "stylelint": "^14.3.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.1",
     "webpack-merge": "^5.8.0",
