--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "stylelint-config-standard-scss"
+  "extends": [
+    "stylelint-config-standard-scss"
+  ],
+  "overrides": [
+    {
+      "files": ["**/*.scss"],
+      "customSyntax": "postcss-scss"
+    }
+  ]
 }
