--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "mini-css-extract-plugin": "^2.4.2",
-    "node-sass": "^6.0.1",
-    "postcss": "^8.3.9",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.5",
     "postcss-loader": "^6.2.0",
     "postcss-scss": "^4.0.3",
+    "sass": "^1.49.7",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
     "stylelint": "^14.3.0",
