--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,5 +7,11 @@
       "files": ["**/*.scss"],
       "customSyntax": "postcss-scss"
     }
-  ]
+  ],
+  "plugins": [
+		"stylelint-order"
+	],
+  "rules": {
+    "order/properties-alphabetical-order": true
+	}
 }
