--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "style-loader": "^3.3.0",
     "stylelint": "^14.3.0",
     "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.1",
     "webpack-merge": "^5.8.0",
