--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
     "webpack-cli": "^4.9.1",
     "webpack-merge": "^5.8.0",
     "webpack-remove-empty-scripts": "^0.7.1"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist"
+  ]
 }
